--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,14 @@ egui = "0.28.1"
 eframe = { version = "0.28.1", default-features = false, features = [
     "default_fonts",
     "wgpu",
+    "persistence",
 ] }
 
 log = "0.4"
 bytemuck = "1.14.0"
 once_cell = "1.19.0"
 instant = { version = "0.1.13", features = ["now", "wasm-bindgen"] }
+serde = { version = "1.0.208", features = ["derive"] }
 
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
