--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ eframe = { version = "0.28.1", default-features = false, features = [
     "persistence",
 ] }
 
+wgpu = { version = "0.20.1", features = ["glsl", "webgpu"] }
+
 log = "0.4"
 bytemuck = "1.14.0"
 once_cell = "1.19.0"
