--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ once_cell = "1.19.0"
 instant = { version = "0.1.13", features = ["now", "wasm-bindgen"] }
 serde = { version = "1.0.208", features = ["derive"] }
 
+rendering_stuff = { path = "rendering_stuff" }
+
 #egui extentions
 egui_plot = "0.28.1"
 catppuccin-egui = { version = "5.1", default-features = false, features = ["egui28"] }
