--- a/rendering_stuff/Cargo.toml
+++ b/rendering_stuff/Cargo.toml
@@ -10,3 +10,6 @@ bytemuck = { version = "1.14.0", features = ["derive"] }
 once_cell = "1.19.0"
 serde = { version = "1.0.208", features = ["derive"] }
 egui-wgpu = "0.28.1"
+
+
+image = "0.25.2"
