--- a/graphing_stuff/Cargo.toml
+++ b/graphing_stuff/Cargo.toml
@@ -8,10 +8,16 @@ rust-version = "1.56"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-eframe = "0.28"
+eframe = { version = "0.28.1", default-features = false, features = [
+    "default_fonts",
+    "wgpu",
+    "persistence",
+] }
 egui_node_graph2 = "0.6.0"
 anyhow = "1.0"
 serde = { version = "1.0", optional = true }
+strum = {version = "0.26.3", features = ["derive"]}
+shader_paser = {path = "../shader_paser"}
 
 [features]
 default = []
