--- a/rendering_stuff/Cargo.toml
+++ b/rendering_stuff/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-egui = "0.28.1"
+egui = { version = "0.28.1", features = [] }
 wgpu = { version = "0.20.1", features = ["glsl", "webgpu"] }
 bytemuck = { version = "1.14.0", features = ["derive"] }
 once_cell = "1.19.0"
