--- a/rendering_stuff/Cargo.toml
+++ b/rendering_stuff/Cargo.toml
@@ -11,5 +11,7 @@ once_cell = "1.19.0"
 serde = { version = "1.0.208", features = ["derive"] }
 egui-wgpu = "0.28.1"
 
+common = { path = "../common" }
+
 
 image = "0.25.2"
