--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -42,3 +42,8 @@ env_logger = "0.11.5"
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4"
 wasm-bindgen = "0.2.93"
+
+
+[profile.release]
+opt-level = 3
+lto = "fat"
