--- a/graphing_stuff/Cargo.toml
+++ b/graphing_stuff/Cargo.toml
@@ -13,13 +13,9 @@ eframe = { version = "0.28.1", default-features = false, features = [
     "wgpu",
     "persistence",
 ] }
-egui_node_graph2 = "0.6.0"
+egui_node_graph2 = { version = "0.6.0", features = ["persistence"] }
 anyhow = "1.0"
-serde = { version = "1.0", optional = true }
+serde = { version = "1.0", features = ["derive"] }
 strum = {version = "0.26.3", features = ["derive"]}
 shader_paser = {path = "../shader_paser"}
 common = { path = "../common" }
-
-[features]
-default = []
-persistence = ["serde", "egui_node_graph2/persistence", "eframe/persistence"]
