--- a/shader_paser/Cargo.toml
+++ b/shader_paser/Cargo.toml
@@ -5,3 +5,4 @@ edition = "2021"
 
 [dependencies]
 strum = {version = "0.26.3", features = ["derive"]}
+serde = { version = "1.0", features = ["derive"] }
