--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -1,17 +1,14 @@
 [package]
 name = "app"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
+
 
 [lib]
 crate-type = ["cdylib", "rlib"]
 
-[[bin]]
-name = "app_bin"
-path = "src/main.rs"
 
-
-[dependencies]
+[dependencies] # gloabal
 egui = "0.28.1"
 eframe = { version = "0.28.1", default-features = false, features = [
     "default_fonts",
@@ -20,33 +17,28 @@ eframe = { version = "0.28.1", default-features = false, features = [
 ] }
 
 wgpu = { version = "0.20.1", features = ["glsl", "webgpu"] }
+egui-wgpu = "0.28.1"
 
 log = "0.4"
 bytemuck = "1.14.0"
 once_cell = "1.19.0"
 serde = { version = "1.0.208", features = ["derive"] }
-
-rendering_stuff = { path = "../rendering_stuff" }
-graphing_stuff = { path = "../graphing_stuff" }
-common = { path = "../common" }
+strum = {version = "0.26.3", features = ["derive"]}
 
 #egui extentions
 egui_plot = "0.28.1"
 catppuccin-egui = { version = "5.1", default-features = false, features = ["egui28"] }
 
+# local
+path_tracer = { path = "../path_tracer" }
+graph_editor = { path = "../graph_editor" }
+common = { path = "../common" }
 
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies] # native
 env_logger = "0.11.5"
 
-# web:
-[target.'cfg(target_arch = "wasm32")'.dependencies]
+
+[target.'cfg(target_arch = "wasm32")'.dependencies] # web
 wasm-bindgen-futures = "0.4"
 wasm-bindgen = "0.2.93"
-
-
-[profile.release]
-opt-level = 3
-lto = "fat"
-debug = "none"
-panic = "abort"
-codegen-units = 1
