--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+instant = "0.1.13"
 once_cell = "1.19.0"
-instant = { version = "0.1.13", features = ["now", "wasm-bindgen"] }
