--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -4,5 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+eframe = { version = "0.28.1", default-features = false, features = [
+    "default_fonts",
+    "wgpu",
+    "persistence",
+] }
+
 instant = { version = "0.1.13", features = ["now", "wasm-bindgen"] }
 once_cell = "1.19.0"
