--- a/graph_editor/Cargo.toml
+++ b/graph_editor/Cargo.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-
+eframe = { version = "0.28.1", default-features = false, features = [
+    "default_fonts",
+    "wgpu",
+    "persistence",
+] }
