--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -26,7 +26,12 @@ egui-wgpu = "0.28.1"
 log = "0.4"
 bytemuck = "1.14.0"
 once_cell = "1.19.0"
+instant = "0.1.13"
+
 serde = { version = "1.0.208", features = ["derive"] }
+serde_json = "1.0.128"
+
+strum = { version = "0.26.3", features = ["derive"] }
 
 #egui extentions
 egui_plot = "0.28.1"
