--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -10,5 +10,10 @@ eframe = { version = "0.28.1", default-features = false, features = [
     "persistence",
 ] }
 
+strum = { version = "0.26.3", features = ["derive"] }
+serde = { version = "1.0.208", features = ["derive"] }
+serde_json = "1.0.128"
+
+catppuccin-egui = { version = "5.1", default-features = false, features = ["egui28"] }
 instant = { version = "0.1.13", features = ["now", "wasm-bindgen"] }
 once_cell = "1.19.0"
