--- a/path_tracer/Cargo.toml
+++ b/path_tracer/Cargo.toml
@@ -10,3 +10,8 @@ egui-wgpu = "0.28.1"
 bytemuck = { version = "1.14.0", features = ["derive"] }
 once_cell = "1.19.0"
 
+eframe = { version = "0.28.1", default-features = false, features = [
+    "default_fonts",
+    "wgpu",
+    "persistence",
+] }
