--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -17,3 +17,4 @@ serde_json = "1.0.128"
 catppuccin-egui = { version = "5.1", default-features = false, features = ["egui28"] }
 instant = { version = "0.1.13", features = ["now", "wasm-bindgen"] }
 once_cell = "1.19.0"
+bytemuck = { version = "1.14.0", features = ["derive"] }
