--- a/path_tracer/Cargo.toml
+++ b/path_tracer/Cargo.toml
@@ -15,3 +15,5 @@ eframe = { version = "0.28.1", default-features = false, features = [
     "wgpu",
     "persistence",
 ] }
+
+common = { path = "../common" }
