--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -18,3 +18,6 @@ catppuccin-egui = { version = "5.1", default-features = false, features = ["egui
 instant = { version = "0.1.13", features = ["now", "wasm-bindgen"] }
 once_cell = "1.19.0"
 bytemuck = { version = "1.14.0", features = ["derive"] }
+
+wgpu = { version = "0.20.1", features = ["glsl", "webgpu"] }
+egui-wgpu = "0.28.1"
