--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,8 @@ instant = { version = "0.1.13", features = ["now", "wasm-bindgen"] }
 serde = { version = "1.0.208", features = ["derive"] }
 serde_json = "1.0.128"
 
+flume = { version = "0.11.0", features = []}
+
 strum = { version = "0.26.3", features = ["derive"] }
 
 #egui extentions
