--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ flume = { version = "0.11.0", features = [] }
 
 strum = { version = "0.26.3", features = ["derive"] }
 
-performance_profiler = { version = "1.0.2", features = ["display"] }
+triglyceride = { version = "0.1.1", path = "../triglyceride" }
 
 #egui extentions
 egui_plot = "0.28.1"
